--- a/app/src/main/res/layout/activity_my_first.xml
+++ b/app/src/main/res/layout/activity_my_first.xml
@@ -13,6 +13,7 @@
     <Button
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:id="@+id/backBtn"
         android:text="메인 화면으로 돌아가기" />
 
 </LinearLayout>
