--- a/app/src/main/res/layout/activity_my_second.xml
+++ b/app/src/main/res/layout/activity_my_second.xml
@@ -9,6 +9,7 @@
     tools:context=".MySecondActivity">
 
     <TextView
+        android:id="@+id/messageTxt"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="이전 화면에서 입력한 내용"
