--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -31,6 +31,19 @@
 
 
 
+    <TextView
+        android:id="@+id/dataTxt"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="다른 화면을 통한 데이터 입력"
+        android:layout_marginTop="20dp" />
+
+    <Button
+        android:id="@+id/changeTextBtn"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="문구 변경하러 가기"/>
+
 
 
 
